# agent-orchestration

./: .env  .env.example  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .env  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py  state.py
backend/app/agents/: __init__.py  backend_agent.py  base_agent.py  database_agent.py  devops_agent.py  frontend_agent.py  planner_agent.py  researcher_agent.py  update_agent.py
backend/app/auth/: __init__.py  jwt.py  middleware.py  router.py
backend/app/bus/: __init__.py  message_bus.py  message_types.py
backend/app/models/: __init__.py  agent_task.py  base.py  generated_file.py  message.py  project.py  session.py  user.py
backend/app/orchestrator/: __init__.py  orchestrator.py
backend/app/routers/: __init__.py  files.py  projects.py  sessions.py  ws.py
backend/app/schemas/: __init__.py  agent_task.py  generated_file.py  message.py  project.py  session.py  user.py
backend/app/services/: __init__.py  anthropic_client.py  conflict_resolver.py  file_writer.py
backend/data/: jobs.db  jobs.db-shm  jobs.db-wal
backend/keys/: private.pem  public.pem
backend/output/d377a85b-7fe7-4ec1-91a3-2e556f3b695f/devops/apps/backend/: Dockerfile  docker-entrypoint.sh
backend/output/d377a85b-7fe7-4ec1-91a3-2e556f3b695f/devops/apps/frontend/: Dockerfile
backend/scripts/: __init__.py  generate_keys.py  seed.py
(+91 files in other folders)
