# DEVOPS_AGENT | 2026-05-10 | Python project configuration and dependencies
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent-orchestrator-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "anthropic==0.52.0",
    "sqlalchemy==2.0.41",
    "alembic==1.15.2",
    "aiosqlite==0.21.0",
    "asyncpg==0.30.0",
    "httpx==0.28.1",
    "python-dotenv==1.1.0",
    "PyJWT==2.9.0",
    "cryptography==44.0.2",
    "bcrypt==4.2.1",
    "aiofiles==24.1.0",
    "slowapi==0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "respx==0.22.0",
    "ruff==0.11.8",
    "mypy==1.15.0",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
